prevent overflow on collapsed codemarks
https://trello.com/c/2AN41hzd/1832-formatting-on-search-tab-broken-by-specific-codemark

--- a/shared/ui/styles/codemarks.less
+++ b/shared/ui/styles/codemarks.less
@@ -7,6 +7,7 @@
 		padding-top: 5px;
 		padding-bottom: 5px;
 		padding-left: 38px;
+		overflow: hidden;
 		.contents > .body {
 			background: none;
 			white-space: nowrap;
